force-app/main/default/objects/Daily_Expenses__c/Daily_Expenses__c.object-meta.xml
<CustomObject>
    <label>Daily Expense</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Daily Expenses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Daily Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>