force-app/main/default/objects/Daily_Expenses__c/fields/Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bill Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>