force-app/main/default/objects/Daily_Expenses__c/fields/Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Current_Month__c</fullName>
    <label>Current Month Expense</label>
    <referenceTo>Monthly_Expense__c</referenceTo>
    <relationshipLabel>Daily Expenses</relationshipLabel>
    <relationshipName>Daily_Expenses_for_Month</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>