force-app/main/default/objects/Daily_Expenses__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <label>Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Mobile and BroadBand</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Clothing</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Credit Card Liability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>