force-app/main/default/objects/Daily_Expenses__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <formula>Current_Month__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month</label>
    <type>Text</type>
</CustomField>